micromobility_car_navigation/local/Project/dev_ws/log/build_2021-04-01_09-37-36/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py", line 58
    for node in path:
                    ^
SyntaxError: invalid syntax

